--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,11 +36,14 @@ dependencies:
   kakao_flutter_sdk_user: ^1.7.0
   kakao_flutter_sdk: ^1.7.0
   kakao_flutter_sdk_auth: ^1.7.0
+  provider: ^6.1.1
+  table_calendar: ^3.0.9
+
 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
+  cupertino_icons: ^1.0.6
 
 dev_dependencies:
   flutter_test:
